--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,12 +1,62 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
 
+
 //.drop
   z-index: 4562
+body
+  overflow-x: hidden
 
-//.imgx
+.hcard
+  padding-top: 2%
+  padding-left: 5%
+  font-size: 2.5em
+  font-family: 'Work Sans', sans-serif
+
+
+i.ix
+  display: inline-block
+  margin-right: 1em
+
+.panel-cont
+  padding-left: 1%
+  padding-right: 3%
+
+.titlecont
+  padding-top: 25%
+  padding-left: 10%
+  padding-right: 10%
+  color: #ffffff
+
+.hh1
+  font-size: 2em
+  font-family: 'Work Sans', sans-serif
+
+.hh0
+  font-size: 4.2em
+  font-family: 'Work Sans', sans-serif
+
+.footm
+  padding-top: 15%
+  padding-bottom: 5%
+
+
+.bgimage
+  background-image: url(../images/profile-bg.jpg)
+  background-repeat: no-repeat
+  background-size: auto
   max-width: 100%
-  height: auto
 
+.imgx
+  max-width: 100%
+  height: 60px
+
+.loga
+  position: relative
+  text-align: center
+  top: 0
+  height: 60px
+  width: 100%
+  background: white
 
 .nopadding
   padding: 0 !important
