--- a/views/index.jade
+++ b/views/index.jade
@@ -4,41 +4,167 @@ block content
     .row
         .col-md-3.nopadding
             #stick
-                img.img-responsive(src='images/acx.jpg', alt='Cinque Terre')
+                img.img-responsive(src='images/gabinet_updated.jpg', alt='Cinque Terre')
 
                 ul.nav.nav-pills.nav-stacked.text-right
                     li
                         a(href='#')
-                            | Biografia
+                            | O mnie
                             i.fa.fa-pencil-square-o.fa-lg
                     li
                         a(href='#')
-                            | Tytuły Naukowe
+                            | Najważniejszcze artykuły
                             i.fa.fa-graduation-cap.fa-lg
                     li
                         a(href='#')
-                            | Sprawowane Funkcje
+                            | Projekty
                             i.fa.fa-university.fa-lg
                     li
                         a(href='#')
-                            | Nagrody i odznaczenia
+                            | Program wyborczy
                             i.fa.fa-trophy.fa-lg
-
-                    li
-                        a(href='#') Zainteresowania
-                    li
-                        a(href='#') Artykuły
         .col-md-9.nopadding
-            .container-fluid.nopadding
-                a saddddddddddddddddddd
-                img.img-responsive(src='images/acx.jpg', alt='Cinque Terre')
-                a sadddddddddddddddddddsaddddddddddddddddddd
-                img.img-responsive(src='images/acx.jpg', alt='Cinque Terre')
-                img.img-responsive(src='images/acx.jpg', alt='Cinque Terre')
+            #stick1
+                .loga
+                    img.imgx(src='images/ZUT_logo.jpg', alt='Cinque Terre')
+                    img.imgx(src='images/WIMiM_logo.jpg', alt='Cinque Terre')
+            .bgimage.nopadding
+                .titlecont
+                    .hh1 Prof. dr hab. inż. dr h.c.
+                    .hh0 Stefan Berczyński
+                    .h4 Dziekan Wydziału Inżynierii Mechanicznej i Mechatroniki
+                    .button.btn.btn-lg.btn-primary(type='button') Program wyborczy
+                    .footm
+                        hr
+                        .row
+                            .col-md-4
+                                i.fa.fa-map-marker.fa-fw
+                                span al. Piastów 19, 70-310 Szczecin
+                            .col-md-4
+                                i.fa.fa-envelope-o.fa-fw
+                                span stefan.berczynski@zut.edu.pl
+            .panel-cont
+                .row
+                    .col-md-6
+                        .panel.panel-default
+                            .panel-body
+                                .row
+                                    i.ix.fa.fa-graduation-cap.fa-5x
+                                    p.hcard Przebieg pracy naukowej
+                                    .timeline.timeline-left.gray-blue
+                                        .timeline-block
+                                            .timeline-icon
+                                            .timeline-content
+                                                h3 mgr inż.
+                                                p Wydział Budowy Maszyn i Okrętów Politechniki Szczecińskiej
+                                                .timeline-date 1974
+                                        .timeline-block
+                                            .timeline-icon
+                                            .timeline-content
+                                                h3 dr inż.
+                                                p Politechnika Szczecińska, Wydział Budowy Maszyn i Okrętów
+                                                .timeline-date 1978
+                                        .timeline-block
+                                            .timeline-icon
+                                            .timeline-content
+                                                h3 dr hab. inż
+                                                p Politechnika Warszawska, Wydział Mechaniczny Technologiczny
+                                                .timeline-date 1982
+                                        .timeline-block
+                                            .timeline-icon
+                                            .timeline-content
+                                                h3 prof. dr hab. inż
+                                                p Tytuł profesora nauk technicznych
+                                                .timeline-date 1990
+                                        .timeline-block
+                                            .timeline-icon
+                                            .timeline-content
+                                                h3 prof. dr hab. inż. dr h.c.
+                                                p Uniwersytet Techniczny w Sankt-Petersburgu
+                                                .timeline-date 1999
 
+                    .col-md-6
+                        .panel.panel-default
+                            .panel-body
+                                .row
+                                    i.ix.fa.fa-search.fa-5x
+                                    p.hcard Zainteresowania
+                                    ul
+                                        li
+                                            h4 Dynamika obrabiarek
+                                        li
+                                            h4 Dynamika budowli
+                                        li
+                                            h4 Komputerowe wspomaganie projektowania
+                                        li
+                                            h4 Optymalizacja i identyfikacja właściwości dynamicznych maszyn
+                                        li
+                                            h4 Technologia nagniatania powierzchni
+                    .row
+                        .col-md-6
+                            .panel.panel-default
+                                .panel-body
+                                    .row
+                                        i.ix.fa.fa-book.fa-5x
+                                        p.hcard Dorobek naukowy
+                                        ul
+                                            li
+                                                h4 2 monografie
+                                            li
+                                                h4 2 skrypty
+                                            li
+                                                h4 205 artykułów i referatów
+                                            li
+                                                h4 75 niepublikowanych prac naukowo-badawczych
+                        .col-md-6
+                            .panel.panel-default
+                                .panel-body
+                                    .row
+                                        i.ix.fa.fa-users.fa-5x
+                                        p.hcard Wykształcone kadry
+                                        ul
+                                            li
+                                                h4 promotor 9 rozpraw doktorskich
+                                            li
+                                                h4 opiekun naukowy 2 doktorantek
 
-
-
-
-
-
+                .row
+                    .col-md-12
+                        .panel.panel-default
+                            .panel-body
+                                .row
+                                    i.ix.fa.fa-cogs.fa-5x
+                                    p.hcard Pełnione funkcje w uczelni i przemyśle
+                                        .timeline.timeline-alternating.timeline-collapsing.timeline-with-arrows.blue-red-red
+                                            .timeline-block
+                                                .timeline-icon.timeline-icon-hide-border
+                                                    i.fa.fa-bell-o.fa-lg(style='color:#c23b22')
+                                                .timeline-content
+                                                    h2 0.2.1 released
+                                                    ul
+                                                        li
+                                                            | Added arrow support (
+                                                            code .timeline-with-arrows
+                                                            | )
+                                                        li Icons and images supported as timeline icons
+                                                        li Fixes to positioning
+                                                    .timeline-date 2015-01-12
+                                            .timeline-block.timeline-block-icon-only
+                                                .timeline-icon.timeline-icon-text.timeline-icon-hide-border
+                                                    span This is my important text
+                                                .timeline-content
+                                            .timeline-block
+                                                .timeline-icon.timeline-icon-hide-border
+                                                    i.fa.fa-github.fa-lg(style='color:#c23b22')
+                                                .timeline-content
+                                                    p
+                                                        | Pushed up to
+                                                        a(href='https://github.com/andriussev/timelined') GitHub
+                                                        | .
+                                                    .timeline-date 2015-01-11
+                                            .timeline-block
+                                                .timeline-icon
+                                                .timeline-content
+                                                    h2 The start
+                                                    p From idea to execution.
+                                                    .timeline-date 2015-01-10
