--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5817,6 +5817,59 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+body {
+  overflow-x: hidden; }
+
+.hcard {
+  padding-top: 2%;
+  padding-left: 5%;
+  font-size: 2.5em;
+  font-family: 'Work Sans', sans-serif; }
+
+i.ix {
+  display: inline-block;
+  margin-right: 1em; }
+
+.panel-cont {
+  padding-left: 1%;
+  padding-right: 3%; }
+
+.titlecont {
+  padding-top: 25%;
+  padding-left: 10%;
+  padding-right: 10%;
+  color: #ffffff; }
+
+.hh1 {
+  font-size: 2em;
+  font-family: 'Work Sans', sans-serif; }
+
+.hh0 {
+  font-size: 4.2em;
+  font-family: 'Work Sans', sans-serif; }
+
+.footm {
+  padding-top: 15%;
+  padding-bottom: 5%; }
+
+.bgimage {
+  background-image: url(../images/profile-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  max-width: 100%; }
+
+.imgx {
+  max-width: 100%;
+  height: 60px; }
+
+.loga {
+  position: relative;
+  text-align: center;
+  top: 0;
+  height: 60px;
+  width: 100%;
+  background: white; }
+
 .nopadding {
   padding: 0 !important;
   margin: 0 !important; }
