--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,9 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/font-awesome/css/font-awesome.css')
+    link(rel='stylesheet', href='/stylesheets/timeline.css')
     link(href='https://fonts.googleapis.com/css?family=Slabo+13px&subset=latin,latin-ext', rel='stylesheet', type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Work+Sans:400,200', rel='stylesheet', type='text/css')
 
   body
     block content
@@ -18,6 +20,23 @@ html
   script.
     $(document).ready(function () {
       $("#stick").sticky({topSpacing: 0});
+     //$("#stick1").sticky({topSpacing: 0});
+
+      var my_posts = $("[rel=tooltip]");
+
+      var size = $(window).width();
+      for (i = 0; i < my_posts.length; i++) {
+        the_post = $(my_posts[i]);
+
+        if (the_post.hasClass('invert') && size >= 767) {
+          the_post.tooltip({placement: 'left'});
+          the_post.css("cursor", "pointer");
+        } else {
+          the_post.tooltip({placement: 'rigth'});
+          the_post.css("cursor", "pointer");
+        }
+      }
+
     });
 
   //BOOTSTRAP
