--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5820,6 +5820,9 @@ button.close {
 body {
   overflow-x: hidden; }
 
+.itemtlo {
+  background-color: lightblue; }
+
 .hcard {
   padding-top: 2%;
   padding-left: 5%;
@@ -5861,6 +5864,10 @@ i.ix {
 .imgx {
   max-width: 100%;
   height: 60px; }
+
+.imgxt {
+  max-width: 100%;
+  height: 250px; }
 
 .loga {
   position: relative;
