--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,6 +6,9 @@
 body
   overflow-x: hidden
 
+.itemtlo
+  background-color: lightblue
+
 .hcard
   padding-top: 2%
   padding-left: 5%
@@ -49,6 +52,11 @@ i.ix
 .imgx
   max-width: 100%
   height: 60px
+
+.imgxt
+  max-width: 100%
+  height: 250px
+
 
 .loga
   position: relative
