--- a/views/index.jade
+++ b/views/index.jade
@@ -237,7 +237,7 @@ block content
                             .panel-body
                                 .row
                                     i.ix.fa.fa-trophy.fa-5x
-                                    p.hcard 10.	Nagrody i odznaczenia
+                                    p.hcard Nagrody i odznaczenia
                                     ul
                                         li
                                             h4 Nagrody I i II stopnia Ministra Nauki i Szkolnictwa Wyższego
@@ -256,6 +256,9 @@ block content
                     .col-md-12
                         .panel.panel-default
                             .panel-body
+                                .row
+                                    i.ix.fa.fa-tasks.fa-5x
+                                    p.hcard Projekty
                                 .owl-carousel.owl-theme
                                     .item(data-merge='3').itemtlo
                                         .row
