--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,6 +6,13 @@
 body
   overflow-x: hidden
 
+.projlist
+  margin-left: 20px
+
+.projdesc
+  padding-left: 20px
+  text-align: justify
+  text-justify: inter-word
 
 .article
   font-family: 'Roboto', sans-serif
