--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     link(rel='stylesheet', href='/owl.carousel.2.0.0-beta.3/assets/owl.carousel.css')
     link(rel='stylesheet', href='/owl.carousel.2.0.0-beta.3/assets/owl.theme.default.css')
 
-    link(rel='stylesheet', href='//blueimp.github.io/Gallery/css/blueimp-gallery.min.css')
+    link(rel='stylesheet', href='blueimp-gallery/css/blueimp-gallery.min.css')
     link(rel='stylesheet', href='blueimp-bootstrap-image-gallery/css/bootstrap-image-gallery.css')
 
     link(href='https://fonts.googleapis.com/css?family=Slabo+13px&subset=latin,latin-ext', rel='stylesheet', type='text/css')
@@ -22,7 +22,7 @@ html
     script(src='waypoints/lib/noframework.waypoints.js')
 
   body
-    #blueimp-gallery.blueimp-gallery
+    #blueimp-gallery.blueimp-gallery(data-use-bootstrap-modal='false')
       // The container for the modal slides
       .slides
       // Controls for the borderless lightbox
@@ -43,7 +43,7 @@ html
             .modal-footer
               button.btn.btn-default.pull-left.prev(type='button')
                 i.fa.fa-hand-o-left
-                |               Poprzedni
+                | Poprzedni
               button.btn.btn-primary.next(type='button')
                 | Następny
                 i.fa.fa-hand-o-right
@@ -60,7 +60,7 @@ html
   //STICKY
   script(src='jquery-sticky/jquery.sticky.js')
 
-  script(src='//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js')
+  script(src='blueimp-gallery/js/jquery.blueimp-gallery.min.js')
   script(src='blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.js')
 
 
