--- a/views/index.jade
+++ b/views/index.jade
@@ -322,22 +322,22 @@ block content
                                                 #links1
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/01TG.png', title='Opis1', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/01TG.png', alt='01TG')
+                                                            a(href='images/TR/TR1.png', title='Opis1', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR1.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/02TG.png', title='Opis2', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/02TG.png', alt='01TG')
+                                                            a(href='images/TR/TR2.png', title='Opis2', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR2.png', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/03TG.png', title='Opis3', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/03TG.png', alt='01TG')
+                                                            a(href='images/TR/TR3.png', title='Opis3', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR3.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/04TG.png', title='Opis4', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/04TG.png', alt='01TG')
+                                                            a(href='images/TR/TR4.png', title='Opis4', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR4.png', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/05TG.png', title='Opis5', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/05TG.png', alt='01TG')
+                                                            a(href='images/TR/TR5.png', title='Opis5', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR5.png', alt='01TG')
                                         .row
                                             .col-lg-12
                                                 .projlist
@@ -366,22 +366,22 @@ block content
                                                 #links2
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/01TG.png', title='Opis1', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/01TG.png', alt='01TG')
+                                                            a(href='images/FW/01FW.png', title='Opis1', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/01FW.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/02TG.png', title='Opis2', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/02TG.png', alt='01TG')
+                                                            a(href='images/FW/02FW.png', title='Opis2', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/02FW.png', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/03TG.png', title='Opis3', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/03TG.png', alt='01TG')
+                                                            a(href='images/FW/03FW.png', title='Opis3', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/03FW.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/04TG.png', title='Opis4', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/04TG.png', alt='01TG')
+                                                            a(href='images/FW/04FW.jpg', title='Opis4', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/04FW.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/05TG.png', title='Opis5', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/05TG.png', alt='01TG')
+                                                            a(href='images/FW/05FW.jpg', title='Opis5', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/05FW.jpg', alt='01TG')
                                         .row
                                             .col-lg-12
                                                 .projlist
@@ -452,22 +452,22 @@ block content
                                                 #links4
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/01TG.png', title='Opis1', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/01TG.png', alt='01TG')
+                                                            a(href='images/OP/01OP.png', title='Opis1', data-gallery='')
+                                                                img.img-thumbnail(src='images/OP/01OP.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/02TG.png', title='Opis2', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/02TG.png', alt='01TG')
+                                                            a(href='images/OP/02OP.jpg', title='Opis2', data-gallery='')
+                                                                img.img-thumbnail(src='images/OP/02OP.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/03TG.png', title='Opis3', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/03TG.png', alt='01TG')
+                                                            a(href='images/OP/03OP.png', title='Opis3', data-gallery='')
+                                                                img.img-thumbnail(src='images/OP/03OP.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/04TG.png', title='Opis4', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/04TG.png', alt='01TG')
+                                                            a(href='images/OP/04OP.jpg', title='Opis4', data-gallery='')
+                                                                img.img-thumbnail(src='images/OP/04OP.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/05TG.png', title='Opis5', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/05TG.png', alt='01TG')
+                                                            a(href='images/OP/05OP.jpg', title='Opis5', data-gallery='')
+                                                                img.img-thumbnail(src='images/OP/05OP.jpg', alt='01TG')
                                         .row
                                             .col-lg-12
                                                 .projlist
@@ -496,22 +496,22 @@ block content
                                                 #links5
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/01TG.png', title='Opis1', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/01TG.png', alt='01TG')
+                                                            a(href='images/BZ/01BZ.jpg', title='Opis1', data-gallery='')
+                                                                img.img-thumbnail(src='images/BZ/01BZ.jpg', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/02TG.png', title='Opis2', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/02TG.png', alt='01TG')
+                                                            a(href='images/BZ/02BZ.jpg', title='Opis2', data-gallery='')
+                                                                img.img-thumbnail(src='images/BZ/02BZ.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/03TG.png', title='Opis3', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/03TG.png', alt='01TG')
+                                                            a(href='images/BZ/03BZ.png', title='Opis3', data-gallery='')
+                                                                img.img-thumbnail(src='images/BZ/03BZ.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/04TG.png', title='Opis4', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/04TG.png', alt='01TG')
+                                                            a(href='images/BZ/04BZ.jpg', title='Opis4', data-gallery='')
+                                                                img.img-thumbnail(src='images/BZ/04BZ.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/TG/05TG.png', title='Opis5', data-gallery='')
-                                                                img.img-thumbnail(src='images/TG/05TG.png', alt='01TG')
+                                                            a(href='images/BZ/05BZ.png', title='Opis5', data-gallery='')
+                                                                img.img-thumbnail(src='images/BZ/05BZ.png', alt='01TG')
                                         .row
                                             .col-lg-12
                                                 .projlist
