--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title= title
+    title Stefan Berczyński
+    meta(http-equiv='content-type', content='text/html; charset=utf-8')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/font-awesome/css/font-awesome.css')
     link(rel='stylesheet', href='/stylesheets/timeline.css')
